[package]
name = "server"
version = "0.1.0"
authors = ["KuangjuX <qcx@tju.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1" }
mio = { version = "0.7", features = ["os-poll", "net"] }
nix = { version = "0.23.0" }
futures = { version = "0.3.0", features = ["thread-pool"]}
io-uring = { version = "0.5" }
slab = "0.4"
libc = { version = "0.2.98", default-features = false }